<resources>
    <string name="app_name">Layer</string>
    <string name="close">关闭</string>
    <string name="conform">确定</string>
    <string name="cancel">取消</string>
    <string name="i_know">我知道了</string>
    <string name="popup_menu_item">菜单项</string>
    <string name="dialog_title">给个Star</string>
    <string name="dialog_msg">这么好用的框架，动动手指给个Star吧！</string>
    <string name="notification_title">你有一条新短消息</string>
    <string name="notification_desc">点击查看详情</string>
    <string name="toast_msg">网络开小差啦，检查下网络吧~</string>
    <string name="guide_content">实现一个引导层就是这么简单！</string>
    <string name="send">发送</string>
</resources>
