<?xml version="1.0" encoding="utf-8"?>
<per.goweii.layer.visualeffectview.RoundedShadowLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:roundedCornerRadius="@dimen/layer_design_res_corner_radius"
    app:shadowColor="#11000000"
    app:shadowOffsetY="10dp"
    app:shadowRadius="30dp"
    app:shadowSymmetry="true"
    app:shadowSolidColor="@color/layer_design_res_color_surface">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/dialog_title"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="28dp"
            android:paddingRight="20dp"
            android:paddingBottom="25dp"
            android:text="@string/dialog_msg"
            android:textColor="@color/textColor"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f3f3f3"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/fl_dialog_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:id="@+id/tv_dialog_no"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

            </FrameLayout>

            <View
                android:id="@+id/view_line"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#f3f3f3" />

            <FrameLayout
                android:id="@+id/fl_dialog_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:id="@+id/tv_dialog_yes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/i_know"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</per.goweii.layer.visualeffectview.RoundedShadowLayout>