<?xml version="1.0" encoding="utf-8"?>
<per.goweii.roundedshadowlayout.RoundedShadowLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_gravity="bottom"
    app:roundedCornerRadiusTopLeft="@dimen/layer_design_res_corner_radius"
    app:roundedCornerRadiusTopRight="@dimen/layer_design_res_corner_radius"
    app:shadowRadius="0dp"
    android:background="@color/colorSurface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dialog_title"
            style="@style/TextStyleTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/dialog_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorDivider" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextStyleListItem"
                    android:text="@string/dialog_msg" />

                <TextView
                    style="@style/TextStyleListItem"
                    android:text="@string/dialog_msg" />

                <TextView
                    style="@style/TextStyleListItem"
                    android:text="@string/dialog_msg" />

                <TextView
                    style="@style/TextStyleListItem"
                    android:text="@string/dialog_msg" />

                <TextView
                    style="@style/TextStyleListItem"
                    android:text="@string/dialog_msg" />

                <TextView
                    style="@style/TextStyleListItem"
                    android:text="@string/dialog_msg" />

                <TextView
                    style="@style/TextStyleListItem"
                    android:text="@string/dialog_msg" />

                <TextView
                    style="@style/TextStyleListItem"
                    android:text="@string/dialog_msg" />

                <TextView
                    style="@style/TextStyleListItem"
                    android:text="@string/dialog_msg" />

                <TextView
                    style="@style/TextStyleListItem"
                    android:text="@string/dialog_msg" />

                <TextView
                    style="@style/TextStyleListItem"
                    android:text="@string/dialog_msg" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <View style="@style/DividerStyle_H_Normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/bottom_sheet_fl_close"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    style="@style/TextStyleButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/close" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</per.goweii.roundedshadowlayout.RoundedShadowLayout>
