<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialog_fullscreen_bg"
    android:orientation="vertical">

    <per.goweii.actionbarex.common.ActionBarCommon
        android:id="@+id/dialog_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ab_bottomLineColor="@color/colorDivider"
        app:ab_bottomLineHeight="1dp"
        app:ab_statusBarVisible="gone"
        app:ab_immersion="unchanged"
        app:ab_statusBarMode="unchanged"
        app:abc_leftText="@string/close"
        app:abc_rightText="@string/conform"
        app:abc_titleText="@string/dialog_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="15dp"
                android:text="@string/dialog_msg"
                android:textColor="#232323"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>